# TraceLeak

./: .gitignore  CONTRIBUTING.md  NEXT_TODO.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TODO.md  model_vs_sequence_baseline_report.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  model-sequence-audit.yml  openssl-event-map.yml  openssl-instrumentation-stub.yml  openssl-layout.yml  openssl-preflight.yml
docs/: api.md  baselines.md  claim_levels.md  comparisons.md  concept.md  core-modeling-inventory.md  core-roadmap-reset.md  deep-program-dataset-contract-v1.md  dependency-graph-schema-v1.md  design.md  experiments.md  features.md  index.md  level13-completion-todo.md  level14-completion-todo.md  level15-completion-todo.md  level16-completion-todo.md  level17-completion-todo.md  level18-completion-todo.md  level19-completion-todo.md  level20-completion-todo.md  level21-completion-todo.md  level22-completion-todo.md  level23-completion-todo.md  level24-completion-todo.md  level25-completion-todo.md  level26-completion-todo.md  level5-to-level6-todo.md  level6-completion-todo.md  level7-completion-todo.md  level7-readiness-review.md  level8-completion-todo.md  local-validation.md  local_workflow.md  model-output-contract-v1.md  model_results.md  modeling.md  negative_controls.md  next-core-task.md  next-session-handoff.md  (+17 more)
examples/openssl_metadata_demo/: README.md  symbolic_metadata_input.json
examples/openssl_preflight/: openssl_rsa_keygen_event_map_sample.json  openssl_rsa_keygen_preflight_sample.json  openssl_source_pin_sample.json
examples/openssl_trace_contract/: openssl_rsa_keygen_trace_contract_sample.json
examples/openssl_trace_events/: openssl_rsa_keygen_redacted_event_stream_sample.jsonl
examples/synthetic/: ablation_sample.json  baseline_sample.json  claim_l5_sample.json  comparison_sample.json  model_result_sample.json  model_sequence_baseline_result_sample.json  model_sequence_baseline_sample.json  model_sequence_nn_control_seed_001.json  (+13 more)
scripts/: __init__.py  adapt_openssl_derived_metadata.py  audit_model_sequence_labels.py  bootstrap_local.ps1  bootstrap_local.sh  build_metadata_symbolic_input.py  build_openssl_actual_execution_preflight.py  build_openssl_event_emitter_artifact.py  build_openssl_instrumentation_bundle_manifest.py  build_openssl_isolated_execution_plan.py  build_openssl_materialization_output_contract.py  build_openssl_model_sequence_handoff_contract.py  build_openssl_model_sequence_ingestion_preflight.py  build_openssl_model_sequence_input_contract.py  build_openssl_model_sequence_metadata_sample.py  build_openssl_model_sequence_metadata_sample_model_preflight.py  build_openssl_model_sequence_sample_contract.py  build_openssl_patch_materialization_review_template.py  build_openssl_pending_review.py  build_openssl_review_checklist.py  build_openssl_reviewed_materialization_request.py  build_openssl_trace_sample.py  build_path_deep_sample.py  build_review_chain_summary.py  build_toy_rsa_like_model_sequence_sample.py  compare_demo_summaries.py  compare_model_sequence_mlp.py  compare_model_sequence_nn_to_baseline.py  comparison_to_report.py  convert_view.py  define_openssl_instrumentation_stub.py  evaluate_baseline.py  evaluate_model_sequence_baseline.py  evaluate_stability.py  extract_features.py  extract_model_sequence.py  extract_openssl_patch_materialization_approval_skeleton.py  generate_openssl_pinned_manifest.py  inspect_openssl_layout.py  make_report.py  (+73 more)
tests/: conftest.py  test_adapt_openssl_derived_metadata_cli.py  test_analysis_bundle_contract.py  test_analysis_bundle_links.py  test_analysis_contracts.py  test_attribution.py  test_baselines.py  test_build_metadata_symbolic_input_cli.py  test_build_openssl_actual_execution_preflight_cli.py  test_build_openssl_isolated_execution_plan_cli.py  test_build_openssl_materialization_output_contract_cli.py  test_build_openssl_model_sequence_handoff_contract_cli.py  test_build_openssl_model_sequence_ingestion_preflight_cli.py  test_build_openssl_model_sequence_input_contract_cli.py  test_build_openssl_model_sequence_metadata_sample_cli.py  test_build_openssl_model_sequence_metadata_sample_model_preflight_cli.py  test_build_openssl_model_sequence_sample_contract_cli.py  test_build_openssl_reviewed_materialization_request_cli.py  test_build_review_chain_summary_cli.py  test_build_toy_rsa_like_model_sequence_sample_cli.py  test_c_static_events.py  test_claim_levels.py  test_compare_demo_summaries_cli.py  test_compare_model_sequence_nn_to_baseline_cli.py  test_comparison.py  test_comparison_to_report_cli.py  test_config.py  test_deep_program_dataset.py  test_deep_sample_consumers.py  test_define_openssl_instrumentation_stub_cli.py  test_demo_summary_comparison.py  test_dependency_graph_schema.py  test_evaluate_baseline_cli.py  test_evaluate_model_sequence_baseline_cli.py  test_evaluate_stability_cli.py  test_evidence_chain_contract.py  test_extract_features_cli.py  test_extract_model_sequence_cli.py  test_extract_openssl_patch_materialization_approval_skeleton_cli.py  test_features.py  (+204 more)
traceleak/: __init__.py  analysis_bundle_contract.py  analysis_bundle_links.py  analysis_contracts.py  attribution.py  attribution_export_schema.py  baselines.py  c_call_events.py  c_static_events.py  claim_levels.py  comparison.py  config.py  consumer_views.py  deep_program_dataset.py  deep_sample_consumers.py  demo_summary_comparison.py  dependency_graph_schema.py  evidence_chain_contract.py  features.py  io.py  level10_review_packet.py  level11_next_todo_proposal.py  level12_review_checkpoint.py  level13_closure.py  level14_completeness.py  level15_validation_rollup.py  level16_pre_handoff_review.py  level17_release_readiness.py  level18_archive_index.py  level19_summary.py  level20_closure_index.py  level21_status_index.py  level22_index.py  level23_index.py  level24_index.py  level25_index.py  level26_index.py  level7_review_gate.py  level8_artifact_intake.py  level9_readiness_audit.py  (+103 more)
(+13 files in other folders)
