[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "traceleak"
version = "0.1.0"
description = "Source-level neural/statistical leakage assessment for cryptographic implementations."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Unjuno" }
]
keywords = [
  "cryptography",
  "side-channel",
  "leakage-assessment",
  "constant-time",
  "security-research"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Unjuno/TraceLeak"
Repository = "https://github.com/Unjuno/TraceLeak"
Issues = "https://github.com/Unjuno/TraceLeak/issues"

[project.scripts]
traceleak-validate-trace = "scripts.validate_trace:main"
traceleak-convert-view = "scripts.convert_view:main"
traceleak-extract-features = "scripts.extract_features:main"
traceleak-evaluate-baseline = "scripts.evaluate_baseline:main"
traceleak-make-report = "scripts.make_report:main"
traceleak-validate-config = "scripts.validate_config:main"
traceleak-validate-model-result = "scripts.validate_model_result:main"
traceleak-model-result-to-report = "scripts.model_result_to_report:main"
traceleak-run-experiment = "scripts.run_experiment:main"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["traceleak*", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
