[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "traceleak"
version = "0.1.0"
description = "Source-level neural/statistical leakage assessment for cryptographic implementations."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Unjuno" }
]
keywords = [
  "cryptography",
  "side-channel",
  "leakage-assessment",
  "constant-time",
  "security-research"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Unjuno/TraceLeak"
Repository = "https://github.com/Unjuno/TraceLeak"
Issues = "https://github.com/Unjuno/TraceLeak/issues"

[project.scripts]
traceleak-validate-trace = "scripts.validate_trace:main"
traceleak-convert-view = "scripts.convert_view:main"
traceleak-extract-features = "scripts.extract_features:main"
traceleak-extract-model-sequence = "scripts.extract_model_sequence:main"
traceleak-evaluate-model-sequence-baseline = "scripts.evaluate_model_sequence_baseline:main"
traceleak-train-model-sequence-nn = "scripts.train_model_sequence_nn:main"
traceleak-compare-model-sequence-nn-to-baseline = "scripts.compare_model_sequence_nn_to_baseline:main"
traceleak-model-sequence-comparison-to-report = "scripts.model_sequence_comparison_to_report:main"
traceleak-model-sequence-cross-report = "scripts.model_sequence_cross_report:main"
traceleak-evaluate-baseline = "scripts.evaluate_baseline:main"
traceleak-make-report = "scripts.make_report:main"
traceleak-validate-config = "scripts.validate_config:main"
traceleak-validate-model-result = "scripts.validate_model_result:main"
traceleak-model-result-to-report = "scripts.model_result_to_report:main"
traceleak-validate-patch-verification = "scripts.validate_patch_verification:main"
traceleak-patch-verification-to-report = "scripts.patch_verification_to_report:main"
traceleak-evaluate-stability = "scripts.evaluate_stability:main"
traceleak-validate-claim = "scripts.validate_claim:main"
traceleak-comparison-to-report = "scripts.comparison_to_report:main"
traceleak-run-experiment = "scripts.run_experiment:main"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["traceleak*", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
