[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "traceleak"
version = "0.1.0"
description = "Source-level neural/statistical leakage assessment for cryptographic implementations."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Unjuno" }
]
keywords = [
  "cryptography",
  "side-channel",
  "leakage-assessment",
  "constant-time",
  "security-research"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Unjuno/TraceLeak"
Repository = "https://github.com/Unjuno/TraceLeak"
Issues = "https://github.com/Unjuno/TraceLeak/issues"

[project.scripts]
traceleak-validate-trace = "scripts.validate_trace:main"
traceleak-convert-view = "scripts.convert_view:main"
traceleak-extract-features = "scripts.extract_features:main"
traceleak-extract-model-sequence = "scripts.extract_model_sequence:main"
traceleak-evaluate-model-sequence-baseline = "scripts.evaluate_model_sequence_baseline:main"
traceleak-train-model-sequence-nn = "scripts.train_model_sequence_nn:main"
traceleak-compare-model-sequence-nn-to-baseline = "scripts.compare_model_sequence_nn_to_baseline:main"
traceleak-model-sequence-comparison-to-report = "scripts.model_sequence_comparison_to_report:main"
traceleak-model-sequence-cross-report = "scripts.model_sequence_cross_report:main"
traceleak-build-toy-rsa-like-model-sequence-sample = "scripts.build_toy_rsa_like_model_sequence_sample:main"
traceleak-audit-model-sequence-labels = "scripts.audit_model_sequence_labels:main"
traceleak-model-sequence-ablation-report = "scripts.model_sequence_ablation_report:main"
traceleak-run-mlp-report-chain = "scripts.run_mlp_report_chain:main"
traceleak-run-mlp-expected-check = "scripts.run_mlp_expected_check:main"
traceleak-build-review-chain-summary = "scripts.build_review_chain_summary:main"
traceleak-build-openssl-actual-execution-preflight = "scripts.build_openssl_actual_execution_preflight:main"
traceleak-build-openssl-isolated-execution-plan = "scripts.build_openssl_isolated_execution_plan:main"
traceleak-build-openssl-reviewed-materialization-request = "scripts.build_openssl_reviewed_materialization_request:main"
traceleak-validate-openssl-materialization-approval-gate = "scripts.validate_openssl_materialization_approval_gate:main"
traceleak-build-openssl-materialization-output-contract = "scripts.build_openssl_materialization_output_contract:main"
traceleak-validate-openssl-materialization-output-manifest = "scripts.validate_openssl_materialization_output_manifest:main"
traceleak-build-openssl-model-sequence-handoff-contract = "scripts.build_openssl_model_sequence_handoff_contract:main"
traceleak-build-openssl-model-sequence-ingestion-preflight = "scripts.build_openssl_model_sequence_ingestion_preflight:main"
traceleak-build-openssl-model-sequence-input-contract = "scripts.build_openssl_model_sequence_input_contract:main"
traceleak-validate-openssl-model-sequence-input-manifest = "scripts.validate_openssl_model_sequence_input_manifest:main"
traceleak-build-openssl-model-sequence-sample-contract = "scripts.build_openssl_model_sequence_sample_contract:main"
traceleak-validate-openssl-model-sequence-sample-manifest = "scripts.validate_openssl_model_sequence_sample_manifest:main"
traceleak-validate-openssl-model-sequence-sample-approval-gate = "scripts.validate_openssl_model_sequence_sample_approval_gate:main"
traceleak-validate-openssl-model-sequence-sample-materialization-request-contract = "scripts.validate_openssl_model_sequence_sample_materialization_request_contract:main"
traceleak-validate-openssl-model-sequence-sample-materialization-output-contract = "scripts.validate_openssl_model_sequence_sample_materialization_output_contract:main"
traceleak-validate-openssl-model-sequence-sample-materialization-output-manifest = "scripts.validate_openssl_model_sequence_sample_materialization_output_manifest:main"
traceleak-validate-openssl-preflight = "scripts.validate_openssl_preflight:main"
traceleak-openssl-preflight-to-report = "scripts.openssl_preflight_to_report:main"
traceleak-validate-openssl-trace-contract = "scripts.validate_openssl_trace_contract:main"
traceleak-openssl-trace-contract-to-report = "scripts.openssl_trace_contract_to_report:main"
traceleak-validate-openssl-trace-events = "scripts.validate_openssl_trace_events:main"
traceleak-openssl-trace-events-to-report = "scripts.openssl_trace_events_to_report:main"
traceleak-validate-openssl-trace-sample = "scripts.validate_openssl_trace_sample:main"
traceleak-openssl-trace-sample-to-report = "scripts.openssl_trace_sample_to_report:main"
traceleak-build-openssl-trace-sample = "scripts.build_openssl_trace_sample:main"
traceleak-run-openssl-instrumentation-chain = "scripts.run_openssl_instrumentation_chain:main"
traceleak-build-openssl-event-emitter-artifact = "scripts.build_openssl_event_emitter_artifact:main"
traceleak-run-openssl-event-emitter-self-check = "scripts.run_openssl_event_emitter_self_check:main"
traceleak-validate-openssl-instrumentation-bundle = "scripts.validate_openssl_instrumentation_bundle:main"
traceleak-build-openssl-instrumentation-bundle-manifest = "scripts.build_openssl_instrumentation_bundle_manifest:main"
traceleak-validate-openssl-instrumentation-bundle-manifest = "scripts.validate_openssl_instrumentation_bundle_manifest:main"
traceleak-validate-openssl-patch-materialization-gate = "scripts.validate_openssl_patch_materialization_gate:main"
traceleak-build-openssl-patch-materialization-review-template = "scripts.build_openssl_patch_materialization_review_template:main"
traceleak-validate-openssl-patch-materialization-review-template = "scripts.validate_openssl_patch_materialization_review_template:main"
traceleak-extract-openssl-patch-materialization-approval-skeleton = "scripts.extract_openssl_patch_materialization_approval_skeleton:main"
traceleak-validate-openssl-event-map = "scripts.validate_openssl_event_map:main"
traceleak-openssl-event-map-to-report = "scripts.openssl_event_map_to_report:main"
traceleak-validate-openssl-source-pin = "scripts.validate_openssl_source_pin:main"
traceleak-openssl-layout-to-report = "scripts.openssl_layout_to_report:main"
traceleak-generate-openssl-pinned-manifest = "scripts.generate_openssl_pinned_manifest:main"
traceleak-inspect-openssl-layout = "scripts.inspect_openssl_layout:main"
traceleak-plan-openssl-instrumentation = "scripts.plan_openssl_instrumentation:main"
traceleak-define-openssl-instrumentation-stub = "scripts.define_openssl_instrumentation_stub:main"
traceleak-review-openssl-event-slots = "scripts.review_openssl_event_slots:main"
traceleak-build-openssl-review-checklist = "scripts.build_openssl_review_checklist:main"
traceleak-build-openssl-pending-review = "scripts.build_openssl_pending_review:main"
traceleak-prepare-openssl-worktree = "scripts.prepare_openssl_worktree:main"
traceleak-evaluate-baseline = "scripts.evaluate_baseline:main"
traceleak-make-report = "scripts.make_report:main"
traceleak-validate-config = "scripts.validate_config:main"
traceleak-validate-model-result = "scripts.validate_model_result:main"
traceleak-model-result-to-report = "scripts.model_result_to_report:main"
traceleak-validate-patch-verification = "scripts.validate_patch_verification:main"
traceleak-patch-verification-to-report = "scripts.patch_verification_to_report:main"
traceleak-evaluate-stability = "scripts.evaluate_stability:main"
traceleak-validate-claim = "scripts.validate_claim:main"
traceleak-comparison-to-report = "scripts.comparison_to_report:main"
traceleak-run-experiment = "scripts.run_experiment:main"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["traceleak*", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["external"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "I001"]

[tool.ruff.lint.per-file-ignores]
"traceleak/openssl_patch_materialization_approval_template.py" = ["F401"]
